syntax = "proto3";

package evse;

service EVSEService {
  rpc SaveChargingSession(ChargingSessionRequest) returns (ChargingSessionResponse);
  rpc ReportCriticalError(CriticalErrorRequest) returns (CriticalErrorResponse);
  rpc StartCharging(StartChargingRequest) returns (StartChargingResponse);
  rpc StopCharging(StopChargingRequest) returns (StopChargingResponse);
}

message ChargingSessionRequest {
  int32 device_id = 1;
  int32 session_id = 2;
  int32 port_number = 3;
  int32 duration_minutes = 4;
  int32 energy_consumed_wh = 5;
  string status = 6;
  string timestamp = 7;
}

message ChargingSessionResponse {
  bool success = 1;
  string message = 2;
  int32 billing_id = 3;
}

message CriticalErrorRequest {
  int32 device_id = 1;
  repeated string error_types = 2;
  int32 fault_code = 3;
  string severity = 4;
  string timestamp = 5;
}

message CriticalErrorResponse {
  bool success = 1;
  string action_required = 2;
}

message StartChargingRequest {
  int32 device_id = 1;
  int32 port = 2;
  int32 max_time_minutes = 3;
  int32 max_energy_wh = 4;
}

message StartChargingResponse {
  bool success = 1;
  int32 session_id = 2;
  string status = 3;
}

message StopChargingRequest {
  int32 device_id = 1;
  int32 port = 2;
}

message StopChargingResponse {
  bool success = 1;
  int32 final_session_id = 2;
  int32 final_energy = 3;
}
